<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Cindemas Utility</string>
    <string name="description_card_image">card image</string>
    <string name="title_idol_select">Select idol</string>
    <string name="title_idol_profile">Idol profile</string>
    <string name="info_rarity">Rarity:</string>
    <string name="info_cost">Cost:</string>
    <string name="info_maxlevel">Max level:</string>
    <string name="before_evolve">Before evolve</string>
    <string name="after_evolve">After evolve</string>
    <string name="info_icon">idol icon</string>
    <string name="waiting_message">Preparing database\nPlease wait</string>
    <string name="info_max_attack">MATK:</string>
    <string name="info_max_defense">MDEF:</string>
    <string name="show_secret_comments">Show secret comments</string>
    <string name="search_title">Search</string>
    <string name="search_hint">Idol name</string>
    <string name="info_skill">Skill:</string>
    <string name="info_effect">Effect:</string>
    <string name="producer_name">Producer name</string>
    <string name="sortby">Sort</string>
    <string name="sortby_database">No sort</string>
    <string name="sortby_atk">By ATK</string>
    <string name="sortby_def">By DEF</string>
    <string name="sortby_atkrate">By ATK/Cost</string>
    <string name="sortby_defrate">By DEF/Cost</string>
    <string name="image_framed">Framed</string>
    <string name="image_noframed">No framed</string>
    <string name="share">Share</string>
    <string name="info_height_template" translatable="false">%s cm</string>
    <string name="info_weight_template" translatable="false">%s kg</string>
    <string name="info_bwh_template" translatable="false">%s/%s/%s</string>
    <string name="info_name">Name:</string>
    <string name="info_age">Age:</string>
    <string name="info_height">Height:</string>
    <string name="info_weight">Weight:</string>
    <string name="info_bwh">B-W-H:</string>
    <string name="info_birthday">Birthday:</string>
    <string name="info_constellation">Constellation:</string>
    <string name="info_blood">Blood type:</string>
    <string name="info_arm">Arm:</string>
    <string name="info_from">From:</string>
    <string name="info_hobby">Hobby:</string>
    <string name="title_easter_egg_yayoi">Happy Birthday Yayoi!</string>
    <string name="filter">Filter</string>
    <string name="filter_rarity_6" translatable="false">SR+</string>
    <string name="filter_rarity_5" translatable="false">SR</string>
    <string name="filter_rarity_4" translatable="false">R+</string>
    <string name="filter_rarity_3" translatable="false">R</string>
    <string name="filter_rarity_2" translatable="false">N+</string>
    <string name="filter_rarity_1" translatable="false">N</string>
    <string name="filter_attribute_cute">Cute</string>
    <string name="filter_attribute_cool">Cool</string>
    <string name="filter_attribute_passion">Passion</string>
    <string name="filter_attribute_all">All</string>
    <string name="filter_attribute">Attribute</string>
    <string name="filter_rarity">Rarity</string>
    <string name="info_skill_level">Skill Lv</string>
    <string name="settings">Settings</string>
    <string name="title_producer_settings">Producer Settings</string>
    <string name="sortby_atkdef">ATK+DEF</string>
    <string name="title_activity_office_idol_list">OfficeIdolListActivity</string>
    <string name="action_settings">Settings</string>
    <string name="filter_skill">Skill</string>
    <string name="filter_skill_false">No</string>
    <string name="filter_skill_true">Yes</string>
</resources>
