<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/filter_attribute"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow>

            <RadioButton
                android:id="@+id/filter_attribute_all"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/filter_attribute_all" />

            <RadioButton
                android:id="@+id/filter_attribute_cute"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/filter_attribute_cute" />
        </TableRow>

        <TableRow>

            <RadioButton
                android:id="@+id/filter_attribute_cool"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/filter_attribute_cool" />

            <RadioButton
                android:id="@+id/filter_attribute_passion"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/filter_attribute_passion" />
        </TableRow>
    </TableLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="16dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/filter_rarity"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow>

            <CheckBox
                android:id="@+id/filter_rarity_6"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/filter_rarity_6" />

            <CheckBox
                android:id="@+id/filter_rarity_4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/filter_rarity_4" />

            <CheckBox
                android:id="@+id/filter_rarity_2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/filter_rarity_2" />
        </TableRow>

        <TableRow>

            <CheckBox
                android:id="@+id/filter_rarity_5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/filter_rarity_5" />

            <CheckBox
                android:id="@+id/filter_rarity_3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/filter_rarity_3" />

            <CheckBox
                android:id="@+id/filter_rarity_1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/filter_rarity_1" />
        </TableRow>
    </TableLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="16dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/filter_skill"
        android:textAppearance="?android:attr/textAppearanceMedium"
        />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <CheckBox
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/filter_skill_false"
            android:id="@+id/filter_skill_false"
            android:layout_weight="1" />

        <CheckBox
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/filter_skill_true"
            android:id="@+id/filter_skill_true"
            android:layout_weight="1" />
    </LinearLayout>

</LinearLayout>